Fix CSS for mobile and give warning when its on mobile phone

--- a/src/app/components/parts/page-container/page-container.component.css
+++ b/src/app/components/parts/page-container/page-container.component.css
@@ -113,7 +113,7 @@ mat-sidenav .title {
 }
 
 .logo-small img {
-    height: auto;
+    height: 23px;
     width: 70px;
 }
 .mat-icon {
